--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/la_toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar" />
 
     <EditText
         android:id="@+id/la_et_username"
@@ -63,9 +63,9 @@
             android:text="@string/la_txt_sign_in"
             android:textSize="18sp"
             android:textStyle="bold"
+            tools:ignore="ButtonStyle"
             tools:layout_editor_absoluteX="32dp"
-            tools:layout_editor_absoluteY="482dp"
-            tools:ignore="ButtonStyle" />
+            tools:layout_editor_absoluteY="482dp" />
 
         <Button
             android:id="@+id/la_btn_SignUp"
@@ -75,9 +75,9 @@
             android:text="@string/la_txt_sign_up"
             android:textSize="18sp"
             android:textStyle="bold"
+            tools:ignore="ButtonStyle"
             tools:layout_editor_absoluteX="262dp"
-            tools:layout_editor_absoluteY="18dp"
-            tools:ignore="ButtonStyle" />
+            tools:layout_editor_absoluteY="18dp" />
     </LinearLayout>
 
     <TextView
